--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Vai ser uma imagem aqui</h1>
-        <ul>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="definição" alt="imagem de maquiagem">
+        <ul class="cabecalho-lista" >
             <li>Mari Maria Makeup</li>
             <li>Franciny Elke</li>
-            <li>Bruna Tavares</li>
         </ul>
     </header>
+    
 </body>
 </html>
