--- a/index.html
+++ b/index.html
@@ -18,3 +18,12 @@
     
 </body>
 </html>
+
+<section class="maquiagem"> 
+    <div class="maquiagem-div-conteudo">
+        <h2 class="maquiagem-titulo">sobre maquiagem</h2>
+        <p class="maquiagem-texto-um">Maquilhagem ou maquilagem, maquiagem (do francês maquillage) consiste na aplicação de produtos com efeito cosmético, de embelezamento, ou disfarce, seguindo-se alguns casos os ditames da moda e com uso de substâncias especificamente destinadas a tal fim.</p>
+        <p class="maquiagem-texto-2">A maquiagem é uma arte ancestral, encontrada até mesmo entre os homens primitivos, os quais já usavam essências na epiderme, junto com outros enfeites e acessórios. Normalmente esta técnica é aplicada nas pessoas com o objetivo de embelezá-las, mas em várias culturas ela tem finalidades cerimoniais e religiosas.</p>
+    </div>
+    <img class="maquiagem-imagem" src="logo-mari-maria" alt="logo mari maria">
+</section>
