--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="definição" alt="imagem de maquiagem">
+        <img class="cabecalho-imagem" src="franciny logo" alt="logo">
+        <img class="cabecalho-imagem" src="logo mari maria" alt="logo">
         <ul class="cabecalho-lista" >
             <li>Mari Maria Makeup</li>
             <li>Franciny Elke</li>
@@ -25,5 +26,9 @@
         <p class="maquiagem-texto-um">Maquilhagem ou maquilagem, maquiagem (do francês maquillage) consiste na aplicação de produtos com efeito cosmético, de embelezamento, ou disfarce, seguindo-se alguns casos os ditames da moda e com uso de substâncias especificamente destinadas a tal fim.</p>
         <p class="maquiagem-texto-2">A maquiagem é uma arte ancestral, encontrada até mesmo entre os homens primitivos, os quais já usavam essências na epiderme, junto com outros enfeites e acessórios. Normalmente esta técnica é aplicada nas pessoas com o objetivo de embelezá-las, mas em várias culturas ela tem finalidades cerimoniais e religiosas.</p>
     </div>
-    <img class="maquiagem-imagem" src="logo-mari-maria" alt="logo mari maria">
+    <img class="maquiagem-imagem" src="definição" alt="imagem de maquiagem">
 </section>
+<section class="maquiadoras">
+    <h2 class="maquiadoras-titulo">quem são nossas influências de maquiagem</h2>
+    <div class="maquiadoras-div"
+    
