--- a/index.html
+++ b/index.html
@@ -6,29 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="franciny logo" alt="logo">
-        <img class="cabecalho-imagem" src="logo mari maria" alt="logo">
+        <img class="cabecalho-imagem" src="definição" alt="logo">
         <ul class="cabecalho-lista" >
-            <li>Mari Maria Makeup</li>
-            <li>Franciny Elke</li>
+            <li class="cabecalho-lista-item">Maquiadoras</li>
+            <li class="cabecalho-lista-item">Produtos</li>
         </ul>
     </header>
     
+    <section class="maquiagem"> 
+        <div class="maquiagem-div-conteudo">
+            <h2 class="maquiagem-titulo">sobre maquiagem</h2>
+            <p class="maquiagem-texto-um">Maquilhagem ou maquilagem, maquiagem (do francês maquillage) consiste na aplicação de produtos com efeito cosmético, de embelezamento, ou disfarce, seguindo-se alguns casos os ditames da moda e com uso de substâncias especificamente destinadas a tal fim.</p>
+            <p class="maquiagem-texto-2">A maquiagem é uma arte ancestral, encontrada até mesmo entre os homens primitivos, os quais já usavam essências na epiderme, junto com outros enfeites e acessórios. Normalmente esta técnica é aplicada nas pessoas com o objetivo de embelezá-las, mas em várias culturas ela tem finalidades cerimoniais e religiosas.</p>
+        </div>
+    </section>
+    <section class="maquiadoras">
+      <h2 class="maquiadoras-titulo">quem são nossas influências de maquiagem</h2>
+      <div class="maquiadoras-div">
+        <img class="maquiadora-imagem" src="mari makeup" alt="foto da mari maria">
+        <h3 class="maquiadora-nome">Mari Maria</h3>
+        <img class="maquiadora-icone" src="logotipo-do-instagram.png" alt="instagram logo">
+        <img class="maquiadora-icone" src="github.png" alt="github logo">
+      </div>
+      <div class="maquiadoras-div">
+        <img class="maquiadora-imagem" src="Fran-2-1.webp" alt="foto da franciny elke">
+        <h3 class="maquiadora-nome">Franciny Ehlke</h3>
+        <img class="maquiadora-icone" src="logotipo-do-instagram.png" alt="instagram logo">
+        <img class="maquiadora-icone" src="github.png" alt="github logo">
+      </div>
+    </section>
 </body>
-</html>
 
-<section class="maquiagem"> 
-    <div class="maquiagem-div-conteudo">
-        <h2 class="maquiagem-titulo">sobre maquiagem</h2>
-        <p class="maquiagem-texto-um">Maquilhagem ou maquilagem, maquiagem (do francês maquillage) consiste na aplicação de produtos com efeito cosmético, de embelezamento, ou disfarce, seguindo-se alguns casos os ditames da moda e com uso de substâncias especificamente destinadas a tal fim.</p>
-        <p class="maquiagem-texto-2">A maquiagem é uma arte ancestral, encontrada até mesmo entre os homens primitivos, os quais já usavam essências na epiderme, junto com outros enfeites e acessórios. Normalmente esta técnica é aplicada nas pessoas com o objetivo de embelezá-las, mas em várias culturas ela tem finalidades cerimoniais e religiosas.</p>
-    </div>
-    <img class="maquiagem-imagem" src="definição" alt="imagem de maquiagem">
-</section>
-<section class="maquiadoras">
-    <h2 class="maquiadoras-titulo">quem são nossas influências de maquiagem</h2>
-    <div class="maquiadoras-div"
-    
+</html>
