--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="definição" alt="logo">
+        <img class="cabecalho-imagem" src="imagemdior" alt="logo">
         <ul class="cabecalho-lista" >
-            <li class="cabecalho-lista-item">Maquiadoras</li>
-            <li class="cabecalho-lista-item">Produtos</li>
+            <li class="cabecalho-lista-item">Mari Maria</li>
+            <li class="cabecalho-lista-item">Franciny Ehlke</li>
         </ul>
     </header>
     
     <section class="maquiagem"> 
         <div class="maquiagem-div-conteudo">
-            <h2 class="maquiagem-titulo">sobre maquiagem</h2>
+            <h2 class="maquiagem-titulo">Sobre Maquiagem</h2>
             <p class="maquiagem-texto-um">Maquilhagem ou maquilagem, maquiagem (do francês maquillage) consiste na aplicação de produtos com efeito cosmético, de embelezamento, ou disfarce, seguindo-se alguns casos os ditames da moda e com uso de substâncias especificamente destinadas a tal fim.</p>
             <p class="maquiagem-texto-2">A maquiagem é uma arte ancestral, encontrada até mesmo entre os homens primitivos, os quais já usavam essências na epiderme, junto com outros enfeites e acessórios. Normalmente esta técnica é aplicada nas pessoas com o objetivo de embelezá-las, mas em várias culturas ela tem finalidades cerimoniais e religiosas.</p>
         </div>
+        <img class="maquiagemtitulo-imagem" src="maquiagemtitulo" alt="titulo maquiagem">
     </section>
-    <section class="maquiadoras">
-      <h2 class="maquiadoras-titulo">quem são nossas influências de maquiagem</h2>
-      <div class="maquiadoras-div">
-        <img class="maquiadora-imagem" src="mari makeup" alt="foto da mari maria">
-        <h3 class="maquiadora-nome">Mari Maria</h3>
-        <img class="maquiadora-icone" src="logotipo-do-instagram.png" alt="instagram logo">
-        <img class="maquiadora-icone" src="github.png" alt="github logo">
+    <section class="maquiadorauma">
+      <div class="maquiadorauma-div-conteudo">
+      <h2 class="maquiadorauma-titulo">Mari Maria</h2>
+        <img class="maquiadorauma-imagem" src="mari makeup" alt="foto da mari maria">
+        <p class="maquiadorauma-texto-um">Mari Maria Makeup é uma marca que se destaca no universo da beleza, conquistando admiradores por sua qualidade e variedade de produtos. Fundada pela influenciadora digital Mari Maria, a marca ganhou reconhecimento por oferecer uma gama diversificada de cosméticos, desde bases e corretivos até paletas de sombras e batons. Com uma abordagem que valoriza a inclusão e a diversidade, Mari Maria Makeup se tornou conhecida por sua ampla gama de tons de pele e por promover a beleza em todas as suas formas, celebrando a individualidade de cada pessoa.</p>
       </div>
-      <div class="maquiadoras-div">
-        <img class="maquiadora-imagem" src="Fran-2-1.webp" alt="foto da franciny elke">
-        <h3 class="maquiadora-nome">Franciny Ehlke</h3>
-        <img class="maquiadora-icone" src="logotipo-do-instagram.png" alt="instagram logo">
-        <img class="maquiadora-icone" src="github.png" alt="github logo">
+    </section>
+      <section class="maquiadoradois">
+      <div class="maquiadoradois-div-conteudo">
+        <h2 class="maquiadoradois-titulo">Franciny Ehlke</h3>
+        <p class="maquiadoradois-texto-um">Franciny Ehlke é uma influenciadora digital brasileira que se destacou no cenário online por sua autenticidade e estilo de vida inspirador. Com milhões de seguidores em suas redes sociais, Franciny cativa seu público compartilhando sua rotina, dicas de moda, beleza e viagens. Além disso, ela se tornou uma empreendedora de sucesso, lançando sua própria linha de produtos de beleza e moda, conquistando ainda mais admiradores com sua marca própria. O sucesso de Franciny Ehlke não se limita apenas ao mundo digital; ela também é conhecida por seu trabalho filantrópico e social, apoiando causas importantes e inspirando seus seguidores a fazerem o bem.</p>
+        <img class="maquiadoradois-imagem" src="Fran-2-1.webp" alt="foto da franciny elke">
       </div>
     </section>
 </body>
