--- a/index.html
+++ b/index.html
@@ -2,45 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="imagemdior" alt="logo">
-        <ul class="cabecalho-lista" >
+        <img class="cabecalho-imagem" src="imagemdior" alt="umagem maquiagem">
+        <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Mari Maria</li>
             <li class="cabecalho-lista-item">Franciny Ehlke</li>
         </ul>
     </header>
-    
-    <section class="maquiagem"> 
-        <div class="maquiagem-div-conteudo">
-            <h2 class="maquiagem-titulo">Sobre Maquiagem</h2>
-            <p class="maquiagem-texto-um">Maquilhagem ou maquilagem, maquiagem (do francês maquillage) consiste na aplicação de produtos com efeito cosmético, de embelezamento, ou disfarce, seguindo-se alguns casos os ditames da moda e com uso de substâncias especificamente destinadas a tal fim.</p>
-            <p class="maquiagem-texto-2">A maquiagem é uma arte ancestral, encontrada até mesmo entre os homens primitivos, os quais já usavam essências na epiderme, junto com outros enfeites e acessórios. Normalmente esta técnica é aplicada nas pessoas com o objetivo de embelezá-las, mas em várias culturas ela tem finalidades cerimoniais e religiosas.</p>
+    <section class="sobremaquiagem">
+        <div class="sobremaquiagem-div-conteudo">
+            <h1 class="sobremaquiagem-titulo">Sobre Maquiagem</h1>
+            <p class="sobremaquiagem-tento-um">Maquilhagem ou maquilagem, maquiagem (do francês maquillage) consiste na aplicação de produtos com efeito cosmético, de embelezamento, ou disfarce, seguindo-se alguns casos os ditames da moda e com uso de substâncias especificamente destinadas a tal fim.</p>
+            <p class="sobremaquiagem-texto-dois">A maquiagem serve para realçar a beleza da mulher, além de disfarçar algumas coisas que incomodam. Portanto, para o dia a dia, não é necessário usar muitos produtos. Apenas o básico já é o suficiente para deixar qualquer mulher mais confiante. O uso está ligado à personalidade, autoestima, empoderamento e confiança.</p>
         </div>
-        <img class="maquiagemtitulo-imagem" src="maquiagemtitulo" alt="titulo maquiagem">
-    </section>
-    <section class="maquiadorauma">
-      <div class="maquiadorauma-div-conteudo">
-      <h2 class="maquiadorauma-titulo">Mari Maria</h2>
-        <img class="maquiadorauma-imagem" src="mari makeup" alt="foto da mari maria">
-        <p class="maquiadorauma-texto-um">Mari Maria Makeup é uma marca que se destaca no universo da beleza, conquistando admiradores por sua qualidade e variedade de produtos. Fundada pela influenciadora digital Mari Maria, a marca ganhou reconhecimento por oferecer uma gama diversificada de cosméticos, desde bases e corretivos até paletas de sombras e batons. Com uma abordagem que valoriza a inclusão e a diversidade, Mari Maria Makeup se tornou conhecida por sua ampla gama de tons de pele e por promover a beleza em todas as suas formas, celebrando a individualidade de cada pessoa.</p>
-      </div>
-    </section>
-      <section class="maquiadoradois">
-      <div class="maquiadoradois-div-conteudo">
-        <h2 class="maquiadoradois-titulo">Franciny Ehlke</h3>
-        <p class="maquiadoradois-texto-um">Franciny Ehlke é uma influenciadora digital brasileira que se destacou no cenário online por sua autenticidade e estilo de vida inspirador. Com milhões de seguidores em suas redes sociais, Franciny cativa seu público compartilhando sua rotina, dicas de moda, beleza e viagens. Além disso, ela se tornou uma empreendedora de sucesso, lançando sua própria linha de produtos de beleza e moda, conquistando ainda mais admiradores com sua marca própria. O sucesso de Franciny Ehlke não se limita apenas ao mundo digital; ela também é conhecida por seu trabalho filantrópico e social, apoiando causas importantes e inspirando seus seguidores a fazerem o bem.</p>
-        <img class="maquiadoradois-imagem" src="Fran-2-1.webp" alt="foto da franciny elke">
-      </div>
+        <img class="sobremaquiagem-imagem" src="maquiagemtitulo" alt="maquiagens">
     </section>
 </body>
-
 </html>
