--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="imagemdior" alt="umagem maquiagem">
+        <img class="cabecalho-imagem" src="imagemdior" alt="maquiagem dior">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Mari Maria</li>
             <li class="cabecalho-lista-item">Franciny Ehlke</li>
@@ -16,10 +20,32 @@
     <section class="sobremaquiagem">
         <div class="sobremaquiagem-div-conteudo">
             <h1 class="sobremaquiagem-titulo">Sobre Maquiagem</h1>
-            <p class="sobremaquiagem-tento-um">Maquilhagem ou maquilagem, maquiagem (do francês maquillage) consiste na aplicação de produtos com efeito cosmético, de embelezamento, ou disfarce, seguindo-se alguns casos os ditames da moda e com uso de substâncias especificamente destinadas a tal fim.</p>
+            <p class="sobremaquiagem-texto-um">A maquiagem é uma arte ancestral, encontrada até mesmo entre os homens primitivos, os quais já usavam essências na epiderme, junto com outros enfeites e acessórios. Normalmente esta técnica é aplicada nas pessoas com o objetivo de embelezá-las, mas em várias culturas ela tem finalidades cerimoniais e religiosas.</p>
             <p class="sobremaquiagem-texto-dois">A maquiagem serve para realçar a beleza da mulher, além de disfarçar algumas coisas que incomodam. Portanto, para o dia a dia, não é necessário usar muitos produtos. Apenas o básico já é o suficiente para deixar qualquer mulher mais confiante. O uso está ligado à personalidade, autoestima, empoderamento e confiança.</p>
         </div>
-        <img class="sobremaquiagem-imagem" src="maquiagemtitulo" alt="maquiagens">
+        <img class="sobremaquiagem-imagem" src="maquiagemtitulo" alt="imagem maquiagens">
     </section>
+    <section class="marimaria">
+        <div class="marimaria-div-conteudo">
+            <h2 class="marimaria-titulo">Mari Maria Makeup</h2>
+            <p class="marimaria-texto-um">A Mari Maria Makeup é uma marca que revolucionou o mercado de beleza com sua abordagem inovadora e produtos de alta qualidade. Fundada pela renomada maquiadora e influenciadora digital Mari Maria, a marca rapidamente conquistou o coração dos apaixonados por maquiagem em todo o mundo. Com uma gama diversificada de produtos, desde bases com cobertura impecável até batons de longa duração e paletas de sombras sofisticadas, a Mari Maria Makeup oferece opções para atender a todos os gostos e necessidades de beleza. Além da excelência em seus produtos, a Mari Maria Makeup se destaca por sua missão inclusiva, promovendo a diversidade e incentivando a autoexpressão por meio da maquiagem. Com campanhas que celebram a beleza em todas as suas formas e cores, a marca inspira milhões de pessoas a se sentirem confiantes e empoderadas. Combinando inovação, qualidade e compromisso social, a Mari Maria Makeup continua a ser uma referência no universo da beleza, deixando sua marca indelével na indústria cosmética.</p>
+        </div>
+        <img class="marimaria-imagem" src="mari makeup" alt="mari maria imagem">
+    </section>
+    <section class="francinyehlke">
+        <div class="francinyehlke-div-conteudo">
+            <h2 class="francinyehlke-titulo">Franciny Ehlke</h2>
+            <p class="francinyehlke-texto-um">Franciny Ehlke é uma influenciadora digital brasileira que se destacou nas redes sociais por sua autenticidade, beleza e conteúdo diversificado. Com milhões de seguidores em suas plataformas, Franciny conquistou uma legião de fãs ao compartilhar sua rotina, dicas de moda, beleza e viagens, além de inspirar seus seguidores com mensagens motivacionais. Sua presença online é marcada pela sofisticação e bom gosto, refletidos em suas fotos impecáveis e produções elaboradas. Além de seu sucesso nas redes sociais, Franciny também é empreendedora e lançou sua própria marca de roupas e acessórios, que refletem seu estilo único e elegante. Sua influência vai além do mundo digital, sendo reconhecida como uma referência no universo da moda e estilo de vida. Com um carisma cativante e uma paixão genuína por conectar-se com seus seguidores, Franciny Ehlke continua a inspirar e encantar pessoas ao redor do mundo, consolidando-se como uma das principais influenciadoras da atualidade.</p>
+        </div>
+        <img class="francinyehlke-imagem" src="Fran-2-1.webp" alt="franciny imagem">
+    </section>
+    <footer class="rodape">
+        <img class="rodape-imagem" src="logo mari maria" alt="logo m">
+        <img class="rodape-imagem" src="franciny logo" alt="logo f">
+    <div class="footer-div-conteudo">
+        <p class="nome-criador">Desenvolvedora: Bianca Macedo</p>
+        <p class="repositorio">Repositorio da desenvolvedora: https://github.com/mcdbianca/trabalho-1.git</p>
+    </div>
+    </footer>
 </body>
 </html>
